<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btnMinimize"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="@drawable/btn_minimize" />

            <LinearLayout
                android:id="@+id/llCont2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llOrderButton"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnTaxi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/ORDERTAXI" />

                    <Button
                        android:id="@+id/btnRent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/RENTTAXI" />
                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:id="@+id/llFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/od_red" />

                    <EditText
                        android:id="@+id/edtFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/From"
                        android:inputType="text"
                        android:textColorHint="@color/light_gray" />

                    <ImageButton
                        android:id="@+id/btnMapFrom"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/placeholder" />
                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:id="@+id/llTo"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgTo"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/black_circle" />

                    <EditText
                        android:id="@+id/edtTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/To"
                        android:inputType="text"
                        android:textColorHint="@color/light_gray" />

                    <ImageButton
                        android:id="@+id/btnMapto"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/placeholder" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"/>

            <LinearLayout
                android:id="@+id/llOptions"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/Options" />

                <Button
                    android:id="@+id/btnPaymentType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Cash" />
            </LinearLayout>

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

        <LinearLayout
            android:id="@+id/llOrder"
            android:paddingRight="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnORDER"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="@string/ORDER" />

            <ImageButton
                android:id="@+id/btnCalendar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/calendar"
                android:scaleType="centerInside"
                android:background="@null"
                android:text="@string/Cash" />

        </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>