<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentBeforeOrder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnMyPos"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/picklocation"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/btnMinimize"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="@drawable/btn_minimize" />

            <LinearLayout
                android:id="@+id/llCont2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llOrderButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp">

                    <Button
                        android:id="@+id/btnTaxi"
                        style="@style/YTransparentButton1Selected"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/ORDERTAXI" />

                    <Button
                        android:id="@+id/btnRent"
                        style="@style/YTransparentButton1"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/RENTTAXI" />
                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:id="@+id/llFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/od_red" />

                    <EditText
                        android:id="@+id/edtFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/From"
                        android:inputType="text" />

                    <LinearLayout
                        android:id="@+id/btnMapFrom"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:gravity="center">

                        <ImageButton
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:background="@null"
                            android:scaleType="fitCenter"
                            android:src="@drawable/placeholder" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:id="@+id/llTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/imgTo"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/black_circle" />

                    <EditText
                        android:id="@+id/edtTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/To"
                        android:inputType="text" />

                    <LinearLayout
                        android:id="@+id/btnMapto"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:gravity="center">

                        <ImageButton
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:background="@null"
                            android:scaleType="fitCenter"
                            android:src="@drawable/placeholder"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/llOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btnOptions"
                    style="@style/YTransparentButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20sp"
                            android:layout_marginRight="5dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/toggle" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Options" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btnPaymentType"
                    style="@style/YTransparentButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20sp"
                            android:layout_marginRight="5dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/cash" />

                        <TextView
                            android:id="@+id/textViewP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Cash" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/llOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/btnORDER"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/ORDER" />

                <ImageButton
                    android:id="@+id/btnCalendar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/calendar"
                    android:text="@string/Cash" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>